# netcdf

./: Makefile  README.md  VERSION  mix.exs
.github/workflows/: ci.yml  release.yml  rust_ci.yml
lib/netcdf/: native.ex
native/ex_netcdf/: Cargo.toml
native/ex_netcdf/src/: lib.rs
