[package]
name = "ex_netcdf"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "ex_netcdf"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.34.0", default-features = false, features = ["derive", "nif_version_2_15"] }
netcdf = { version = "0.8.1", features = ["static"] }
thiserror = "1"
ndarray = "0.15.6"
